Aggiunta logo high contrast e fix bordi

--- a/src/assets/home.scss
+++ b/src/assets/home.scss
@@ -38,6 +38,7 @@ h2.sectionTitle {
   .tagButton {
     border-radius: 0.5rem;
     background-color: #f0f0f0;
+    border: 1px solid #f0f0f0;
     color: black;
     margin-right: 10px;
     padding: 0 12px;
